--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -154,7 +154,7 @@ const stack = [
         </div>
       </section>
 
-      <!-- Tech Stack Section -->
+      <!-- Tech Stack Section
       <section class="animate">
         <div class="space-y-4">
           <p class="font-semibold text-black dark:text-white">
@@ -176,7 +176,7 @@ const stack = [
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Project Preview Section -->
       <section class="animate">
