--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -54,6 +54,16 @@ import Container from "@components/Container.astro"
         </svg>
       </button>
 
+      <!-- CV Download Button
+      <a href="/CV-Radit.pdf" download class="hidden md:flex items-center justify-center gap-2 h-9 rounded-full px-4 bg-black dark:bg-white text-white dark:text-black hover:bg-black/90 dark:hover:bg-white/90 transition-colors duration-300 ease-in-out border border-black/10 dark:border-white/25">
+        <svg class="size-4 fill-current">
+          <use href="/ui.svg#download"></use>
+        </svg>
+        <span class="text-center font-medium">
+          See my latest CV
+        </span>
+      </a> -->
+
       <button id="header-drawer-button" aria-label={`Toggle drawer open and closed`} class={cn("flex md:hidden", "size-9 rounded-full p-2 items-center justify-center", "bg-transparent hover:bg-black/5 dark:hover:bg-white/20", "stroke-current hover:stroke-black hover:dark:stroke-white", "border border-black/10 dark:border-white/25", "transition-colors duration-300 ease-in-out")}>
         <svg id="drawer-open" class="size-full">
           <use href="/ui.svg#menu"></use>
